--- a/menu.html
+++ b/menu.html
@@ -206,12 +206,16 @@
       centeredSlides: true,
       slidesPerView: 'auto',
       loop:true,
+        autoplay:{
+            delay: 2000
+        },
       coverflowEffect: {
         rotate: 50,
         stretch: 0,
         depth: 100,
         modifier: 1,
         slideShadows : true,
+          
       },
       pagination: {
         el: '.swiper-pagination',
